[gd_scene load_steps=3 format=3 uid="uid://dulb6a3l1dgo2"]

[ext_resource type="Script" uid="uid://lhwmab1jgm8r" path="res://Scripts/terrain.gd" id="1_g24sy"]

[sub_resource type="Curve2D" id="Curve2D_1v1nj"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -1111, -133, 0, 0, 0, 0, 10, -133)
}
point_count = 2

[node name="Terrain" type="StaticBody2D" groups=["terrain_manager"]]
collision_mask = 0
script = ExtResource("1_g24sy")

[node name="TerrainPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_1v1nj")

[node name="TerrainVisual" type="Polygon2D" parent="."]

[node name="TerrainCollision" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-18, -16, -31, -9, -24, -31)
